# app/Models/ProductCategoryModel.php
@@ -25,9 +25,9 @@ class ProductCategoryModel extends BaseModel
 
     // TODO: Define table, fillable, casts, relations.
 
-    public function products()
+    public function products(): BelongsToMany
     {
-        return $this->hasMany(ProductModel::class, 'category_id');
+        return $this->belongsToMany(ProductModel::class, 'categories_products', 'product_category_id', 'product_id');
     }
 
     public function children(): HasMany
